@@ -370,6 +370,10 @@ s32 SEQ_FILE_GC_Read(void)
 #ifndef MBSEQV4L
 	    seq_ui_options.PRINT_AND_MODIFY_WITHOUT_GATES = value;
 #endif
+	  } else if( strcmp(parameter, "UiPrintTransposedNotes") == 0 ) {
+#ifndef MBSEQV4L
+	    seq_ui_options.PRINT_TRANSPOSED_NOTES = value;
+#endif
 	  } else if( strcmp(parameter, "RemoteMode") == 0 ) {
 	    seq_midi_sysex_remote_mode = (value > 2) ? 0 : value;
 	  } else if( strcmp(parameter, "RemotePort") == 0 ) {
@@ -661,6 +665,11 @@ static s32 SEQ_FILE_GC_Write_Hlp(u8 write_to_file)
 
 #ifndef MBSEQV4L
   sprintf(line_buffer, "UiPrintAndModifyWithoutGates %d\n", seq_ui_options.PRINT_AND_MODIFY_WITHOUT_GATES);
+  FLUSH_BUFFER;
+#endif
+
+#ifndef MBSEQV4L
+  sprintf(line_buffer, "UiPrintTransposedNotes %d\n", seq_ui_options.PRINT_TRANSPOSED_NOTES);
   FLUSH_BUFFER;
 #endif
 
