@@ -53,23 +53,24 @@
 #define ITEM_RESTORE_TRACK_SELECTIONS      9
 #define ITEM_MODIFY_PATTERN_BANKS         10
 #define ITEM_PRINT_AND_MODIFY_WITHOUT_GATES 11
-#define ITEM_METRONOME                    12
-#define ITEM_SHADOW_OUT                   13
-#define ITEM_MIDI_REMOTE                  14
-#define ITEM_TRACK_CC                     15
-#define ITEM_RUNTIME_STATUS_OPTIMIZATION  16
-#define ITEM_LIVE_LAYER_MUTE              17
-#define ITEM_INIT_WITH_TRIGGERS           18
-#define ITEM_INIT_CC                      19
-#define ITEM_DRUM_CC                      20
-#define ITEM_TPD_MODE                     21
-#define ITEM_BLM_ALWAYS_USE_FTS           22
-#define ITEM_BLM_FADERS                   23
-#define ITEM_MIXER_CC1234                 24
-#define ITEM_MENU_SHORTCUTS               25
-#define ITEM_SCREEN_SAVER                 26
+#define ITEM_PRINT_TRANSPOSED_NOTES       12
+#define ITEM_METRONOME                    13
+#define ITEM_SHADOW_OUT                   14
+#define ITEM_MIDI_REMOTE                  15
+#define ITEM_TRACK_CC                     16
+#define ITEM_RUNTIME_STATUS_OPTIMIZATION  17
+#define ITEM_LIVE_LAYER_MUTE              18
+#define ITEM_INIT_WITH_TRIGGERS           19
+#define ITEM_INIT_CC                      20
+#define ITEM_DRUM_CC                      21
+#define ITEM_TPD_MODE                     22
+#define ITEM_BLM_ALWAYS_USE_FTS           23
+#define ITEM_BLM_FADERS                   24
+#define ITEM_MIXER_CC1234                 25
+#define ITEM_MENU_SHORTCUTS               26
+#define ITEM_SCREEN_SAVER                 27
 
-#define NUM_OF_ITEMS                      27
+#define NUM_OF_ITEMS                      28
 
 
 static const char *item_text[NUM_OF_ITEMS][2] = {
@@ -131,6 +132,11 @@ static const char *item_text[NUM_OF_ITEMS][2] = {
 
   {//<-------------------------------------->
     "Print/Modify Steps w/o changing Gates",
+    NULL, // enabled/disabled
+  },
+
+  {//<-------------------------------------->
+    "Print Notes with transposed value",
     NULL, // enabled/disabled
   },
 
@@ -372,6 +378,15 @@ static s32 Encoder_Handler(seq_ui_encoder_t encoder, s32 incrementer)
 	seq_ui_options.PRINT_AND_MODIFY_WITHOUT_GATES = (incrementer > 0) ? 1 : 0;
       else
 	seq_ui_options.PRINT_AND_MODIFY_WITHOUT_GATES ^= 1;
+      ui_store_file_required = 1;
+      return 1;
+    } break;
+
+    case ITEM_PRINT_TRANSPOSED_NOTES: {
+      if( incrementer )
+	seq_ui_options.PRINT_TRANSPOSED_NOTES = (incrementer > 0) ? 1 : 0;
+      else
+	seq_ui_options.PRINT_TRANSPOSED_NOTES ^= 1;
       ui_store_file_required = 1;
       return 1;
     } break;
@@ -1015,6 +1030,11 @@ static s32 LCD_Handler(u8 high_prio)
   ///////////////////////////////////////////////////////////////////////////
   case ITEM_PRINT_AND_MODIFY_WITHOUT_GATES: {
     enabled_value = seq_ui_options.PRINT_AND_MODIFY_WITHOUT_GATES;
+  } break;
+
+  ///////////////////////////////////////////////////////////////////////////
+  case ITEM_PRINT_TRANSPOSED_NOTES: {
+    enabled_value = seq_ui_options.PRINT_TRANSPOSED_NOTES;
   } break;
 
   ///////////////////////////////////////////////////////////////////////////
